Mise place du CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <header>
         <meta charset="utf-8">
         <title>Antoine couvreur coach powerlifting</title>
+        <link rel="stylesheet" href="style.css">
     </header>
   <body>
     <!--Menu-->
@@ -18,19 +19,19 @@
     </div>
     <!--Carrousel Image-->
     <div class="carrousel-img">
+        <img src="img/poids.png" alt="Image altères et poids">
     </div>
     <div class="presentation">
         <h2>Qui suis-je?</h2>
         <div class="presentation-texte">
-            <p>Texte de présentation</p>
+            <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
+            <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
+                
+            <p>Je suis, pour ma part, champion du monde Junior -120kg de développé couché. 
+                <br>Champion d'Europe junior -120kg. <br>Champion de France Junior -120kg <br>Champion de France Junior -105kg <br>Champion de France subjunior -83kg</p>
         </div>
         <div class="presentation-photo">
-            <div class="presentation-left">
-                <img src="" alt="image avant la musculation">
-            </div>
-            <div class="presentation-right">
-                <img src="" alt="Image actuellement">
-            </div>
+                <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
         </div>
     </div>
     <!--Entrainement-->
