--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
             <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
                 
-            <p>Je suis, pour ma part, champion du monde Junior -120kg de développé couché. 
-                <br>Champion d'Europe junior -120kg. <br>Champion de France Junior -120kg <br>Champion de France Junior -105kg <br>Champion de France subjunior -83kg</p>
+            <p>Mon palmarès :<br>Champion du monde de développé couché Junior -120kg.
+                <br>Champion d'Europe de développé couché junior -120kg. <br>Champion de France de développé couché Junior -120kg. 
+              <br>Champion de France de développé couché Junior -105kg. 
+              <br>Champion de France de développé couché subjunior -83kg.</p>
         </div>
         <div class="presentation-photo">
                 <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
@@ -62,17 +64,22 @@
                 <img src="" alt="image de squat">
             </div>
             <div class="right">
-                <p>Texte qui explique le mouvement en détail</p>
+                <p>Le squat :
+
+L’athlète pose et maintient la barre sur les épaules, puis il dé-rack la barre. A l’ordre « Squat ! » de l’arbitre central, il fait une flexion des genoux pour descendre, jusqu’à passer sous la parallèle au sol de profil (le pli de la hanche doit être sous le genou si l’on trace une droite), puis il remonte et se stabilise. Enfin, il attendra l’ordre « Rack ! » donné par l’arbitre pour reposer la barre.
+
+ *Définition tirée du site de la Fédération Française de force (http://ffforce.fr)</p>
             </div>
         </div>
         <!--Deadlift-->
         <div class="section">
             <div class="left">
-                <h3>Deadlift</h3>
+                <h3>Le Soulevé de Terre (ou « Deadlift » en anglais)</h3>
                 <img src="" alt="image de deadlift">
             </div>
             <div class="right">
-                <p>Texte qui explique le mouvement en détail</p>
+              <p>L’athlète doit soulever une barre qui est posée au sol, sans l’appuyer sur les cuisses, ni la faire redescendre durant son trajet. Puis, l’athlète doit se stabiliser, épaules en arrière, genoux verrouillés. Enfin il attendra l’ordre « Down ! » de la part de l’arbitre pour reposer la barre au sol. </p>
+              <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>
             </div>
         </div>
     </div>
@@ -89,7 +96,7 @@
         </div>
         <div class="mail">
             <h3>Par mail</h3>
-            <form enctype="text/plain" action="mailto:test@test.com">
+            <form enctype="text/plain" action="mailto:antoinecouvreur1@gmail.com">
                 <fieldset>
                     <legend>Envoyer moi un mail</legend>
                     <label for="pom">Nom:</label>
