Ajout photo + modification css

--- a/index.html
+++ b/index.html
@@ -17,69 +17,79 @@
             <li class="menu-contact">Contact</li>
         </ul>
     </div>
-    <!--Carrousel Image-->
+        <!--Carrousel Image-->
     <div class="carrousel-img">
-        <img src="img/poids.png" alt="Image altères et poids">
+        <img src="img/photo3.jpg" alt="Image altères et poids">
     </div>
-    <div class="presentation">
-        <h2>Qui suis-je?</h2>
-        <div class="presentation-texte">
-            <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
-            <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
+    <div class="centre_site">
+        <div class="presentation">
+            <h2>Qui suis-je?</h2>
+            <div class="presenation-table">
+                <div class="presentation-texte">
+                    <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
+                    <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
                 
-            <p>Mon palmarès :<br>Champion du monde de développé couché Junior -120kg.
-                <br>Champion d'Europe de développé couché junior -120kg. <br>Champion de France de développé couché Junior -120kg. 
-              <br>Champion de France de développé couché Junior -105kg. 
-              <br>Champion de France de développé couché subjunior -83kg.</p>
-        </div>
-        <div class="presentation-photo">
-                <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
-        </div>
-    </div>
-    <!--Entrainement-->
-    <div class="entrainement">
-        <h2>Coaching</h2>
-        <div class="presentation-entrainement">
-            <p>Texte qui te présente explique tes méthode de travail possible de rajouter des infos genre graphique ou rediriger vers un formulaire calcul pour des exercices ect</p>
-        </div>
-    </div>
-    <!--Presentation powerlifting-->
-    <div class="powerlifting">
-        <h2>Qu'est ce que le powerlifting?</h2>
-        <p>Texte qui présente de facon breve le powerlifting</p>
-        <!--Bench-->
-        <div class="section">
-            <div class="left">
-                <h3>Bench</h3>
-                <img src="" alt="image developper coucher">
+                    <p>Mon palmarès :<br>Champion du monde de développé couché Junior -120kg.
+                    <br>Champion d'Europe de développé couché junior -120kg. <br>Champion de France de développé couché Junior -120kg. 
+                    <br>Champion de France de développé couché Junior -105kg. 
+                    <br>Champion de France de développé couché subjunior -83kg.</p>
+                </div>
+                <div class="presentation-photo">
+                    <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
+                </div>
             </div>
-            <div class="right">
-                <p>Texte qui explique le mouvement en détail</p>
+            <div class="clear"></div>
+        </div>
+        <!--Entrainement-->
+        <div class="entrainement">
+            <h2>Coaching</h2>
+            <div class="presentation-entrainement">
+                <p>Texte qui te présente explique tes méthode de travail possible de rajouter des infos genre graphique ou rediriger vers un formulaire calcul pour des exercices ect</p>
             </div>
         </div>
-        <!--Squat-->
-        <div class="section">
-            <div class="left">
-                <h3>Squat</h3>
-                <img src="" alt="image de squat">
-            </div>
-            <div class="right">
-                <p>Le squat :
+        <!--Presentation powerlifting-->
+        <div class="powerlifting">
+            <h2>Qu'est ce que le powerlifting?</h2>
+            <p>Texte qui présente de facon breve le powerlifting</p>
+            <!--Bench-->
+            <div class="section">
+                <div class="left">
+                    <h3>Développé couché (ou "Bench press" en anglais)</h3>
+                    <img src="img/developpe_couche.jpg" alt="image developpé couché">
+                </div>
+                <div class="right">
+                    <p>Allongé sur un banc horizontal, les fessiers en contact avec le banc, l’athlète prend la barre avec ses mains et la dé-rack, 
+                    et au signal « Start ! » de l’arbitre central, il descend la barre en la contrôlant jusqu’à la partie basse des pectoraux ou haut des abdominaux, 
+                    puis fait une pause. Lorsque la barre est stabilisée, l’arbitre donne l’ordre « Press ! » de remonter la barre, puis de la stabiliser en bloquant les coudes.
+                    A l’ordre « Rack ! » de l’arbitre, l’athlète peut reposer la barre.</p>
 
-L’athlète pose et maintient la barre sur les épaules, puis il dé-rack la barre. A l’ordre « Squat ! » de l’arbitre central, il fait une flexion des genoux pour descendre, jusqu’à passer sous la parallèle au sol de profil (le pli de la hanche doit être sous le genou si l’on trace une droite), puis il remonte et se stabilise. Enfin, il attendra l’ordre « Rack ! » donné par l’arbitre pour reposer la barre.
-
- *Définition tirée du site de la Fédération Française de force (http://ffforce.fr)</p>
+                    <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>>
+                </div>
             </div>
-        </div>
-        <!--Deadlift-->
-        <div class="section">
-            <div class="left">
-                <h3>Le Soulevé de Terre (ou « Deadlift » en anglais)</h3>
-                <img src="" alt="image de deadlift">
+            <!--Squat-->
+            <div class="section">
+                <div class="left">
+                    <h3>Squat</h3>
+                    <img src="img/squat.png" alt="image de squat">
+                </div>
+                <div class="right">
+                    <p>L’athlète pose et maintient la barre sur les épaules, puis il dé-rack la barre. A l’ordre « Squat ! » de l’arbitre central, 
+                    il fait une flexion des genoux pour descendre, jusqu’à passer sous la parallèle au sol de profil (le pli de la hanche doit être sous le genou si l’on trace une droite), 
+                    puis il remonte et se stabilise. Enfin, il attendra l’ordre « Rack ! » donné par l’arbitre pour reposer la barre.</p>
+                    <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>
+                </div>
             </div>
-            <div class="right">
-              <p>L’athlète doit soulever une barre qui est posée au sol, sans l’appuyer sur les cuisses, ni la faire redescendre durant son trajet. Puis, l’athlète doit se stabiliser, épaules en arrière, genoux verrouillés. Enfin il attendra l’ordre « Down ! » de la part de l’arbitre pour reposer la barre au sol. </p>
-              <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>
+            <!--Deadlift-->
+            <div class="section">
+                <div class="left">
+                    <h3>Le Soulevé de Terre (ou « Deadlift » en anglais)</h3>
+                    <img src="img/deadlift.png" alt="image de Soulevé de Terre">
+                </div>
+                <div class="right">
+                    <p>L’athlète doit soulever une barre qui est posée au sol, sans l’appuyer sur les cuisses, ni la faire redescendre durant son trajet. 
+                    Puis, l’athlète doit se stabiliser, épaules en arrière, genoux verrouillés. Enfin il attendra l’ordre « Down ! » de la part de l’arbitre pour reposer la barre au sol. </p>
+                    <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>
+                </div>
             </div>
         </div>
     </div>
@@ -113,5 +123,5 @@ L’athlète pose et maintient la barre sur les épaules, puis il dé-rack la ba
         </div>
         </div>
     </div>
-  </body>
+</body>
 </html>
