--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@
     <div class="centre_site">
         <div class="presentation">
             <h2>Qui suis-je?</h2>
-            <div class="presenation-table">
-                <div class="presentation-texte">
-                    <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
-                    <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
+            <div class="presentation-texte">
+                <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
+                <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
                 
-                    <p>Mon palmarès :<br>Champion du monde de développé couché Junior -120kg.
-                    <br>Champion d'Europe de développé couché junior -120kg. <br>Champion de France de développé couché Junior -120kg. 
-                    <br>Champion de France de développé couché Junior -105kg. 
-                    <br>Champion de France de développé couché subjunior -83kg.</p>
-                </div>
-                <div class="presentation-photo">
-                    <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
-                </div>
+                <p>Mon palmarès :<br>Champion du monde de développé couché Junior -120kg.
+                <br>Champion d'Europe de développé couché junior -120kg. <br>Champion de France de développé couché Junior -120kg. 
+                <br>Champion de France de développé couché Junior -105kg. 
+                <br>Champion de France de développé couché subjunior -83kg.</p>
             </div>
-            <div class="clear"></div>
+            <div class="presentation-photo">
+                <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
+            </div>
+            <div class="clear">&nbsp;</div>
         </div>
         <!--Entrainement-->
         <div class="entrainement">
@@ -50,7 +48,7 @@
         <!--Presentation powerlifting-->
         <div class="powerlifting">
             <h2>Qu'est ce que le powerlifting?</h2>
-            <p>Texte qui présente de facon breve le powerlifting</p>
+            <p id="breve">Texte qui présente de facon breve le powerlifting</p>
             <!--Bench-->
             <div class="section">
                 <div class="left">
@@ -63,7 +61,7 @@
                     puis fait une pause. Lorsque la barre est stabilisée, l’arbitre donne l’ordre « Press ! » de remonter la barre, puis de la stabiliser en bloquant les coudes.
                     A l’ordre « Rack ! » de l’arbitre, l’athlète peut reposer la barre.</p>
 
-                    <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>>
+                    <p>*Définition tirée du site de la <a href="http://ffforce.fr">Fédération Française de force</a></p>
                 </div>
             </div>
             <!--Squat-->
