--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
                 <p>Bonjour, <br>Je m'appelle Antoine, j'ai 22 ans et je suis powerlifter depuis 8 ans. Bien que "spécialisé" dans le développé couché.</p>
                 <p>C'est une discipline encore trop peu connu, c'est pourquoi j'ai décidé de créer un site Web dédié à ce sport. Vous y trouverez des programmes, des calculateurs etc etc.. </p>
                 
-                <p>Mon palmarès :<br>Champion du monde de développé couché Junior -120kg.
-                <br>Champion d'Europe de développé couché junior -120kg. <br>Champion de France de développé couché Junior -120kg. 
-                <br>Champion de France de développé couché Junior -105kg. 
-                <br>Champion de France de développé couché subjunior -83kg.</p>
+                <p>Mon palmarès :
+                <ul>
+                    <li>Champion du monde de développé couché Junior -120kg.</li>
+                    <li>Champion d'Europe de développé couché junior -120kg.</li>
+                    <li>Champion de France de développé couché Junior -120kg. </li>
+                    <li>Champion de France de développé couché Junior -105kg. </li>
+                    <li>Champion de France de développé couché subjunior -83kg.</li>
+                </ul>
             </div>
             <div class="presentation-photo">
                 <img src="img/photo_avant_après.jpg" alt="image avant après la musculation">    
