--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     </header>
   <body>
     <!--Menu-->
-    <div class="container-recherche">
-        <form class="recherche">
-            <label for="site-recherche">Rechercher sur le site:</label>
-            <input type="search" id="site-recherche" name="recherche">
-            <button>Recherche</button>
-        </form>
-    </div>
-    <div class="clear">
-    </div>
     <div class="top-menu">
         <h1>Coach powerlifting</h1> 
         <ul class="socialnetworks">
+            <ul id="menu-accordeon">
+               <li><a href="#">MENU</a>
+                    <ol>
+                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
+                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
+                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
+                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
+                    </ol>
+                </li>
+            </ul>
             <li><a href="http://www.facebook.com"><img src="img/facebook_logo.png" alt="Logo de facebook" width="40px"></a></li>
             <li><a href="http://www.twitter.com"><img src="img/twitter_logo.png" alt="Logo de twitter" width="40px"></a></li>
         </ul>
     </div>
-    <div class="menu">
+   <!-- <div class="menu">
         <ul>
             <li class="menu-accueil">Accueil</li>
             <li class="menu-presentation">Qui suis-je?</li>
@@ -31,7 +32,7 @@
             <li class="menu-powerlifting">Qu'est ce que le powerlifting?</li>
             <li class="menu-contact">Contact</li>
         </ul>
-    </div>
+    </div>-->
         <!--Carrousel Image-->
     <div class="carrousel-img">
         <img src="img/photo3.jpg" alt="Image altères et poids">
