Modification logo + menu déroulant a revoir

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   <body>
     <!--Menu-->
     <div class="top-menu">
-        <h1>Coach powerlifting</h1> 
+        <h1><img src="img/Antoine Couvreur.png" alt="Logo site" height="80px"></h1> 
         <ul class="socialnetworks">
-            <ul id="menu-accordeon">
-               <li><a href="#">MENU</a>
+            <!--<ul id="menu-accordeon">
+               <li><a href="#">MENU<img src="img/logo_menu.png" alt="logo du menu" width="20px"></a>
                     <ol>
-                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
-                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
-                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
-                        <li class="sous-menu"><a href="#">lien sous menu 1</a></li>
+                        <li class="sous-menu"><a href="#">Accueil</a></li>
+                        <li class="sous-menu"><a href="#">Qui suis-je?</a></li>
+                        <li class="sous-menu"><a href="#">Coaching</a></li>
+                        <li class="sous-menu"><a href="#">Qu'est ce que le powerlifting?</a></li>
+                        <li class="sous-menu"><a href="#">Contact</a></li>
                     </ol>
                 </li>
-            </ul>
+            </ul>-->
             <li><a href="http://www.facebook.com"><img src="img/facebook_logo.png" alt="Logo de facebook" width="40px"></a></li>
             <li><a href="http://www.twitter.com"><img src="img/twitter_logo.png" alt="Logo de twitter" width="40px"></a></li>
         </ul>
